--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
 - sudo apt-get update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
-  texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
+  texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended lmodern
 script:
 - mkdir _build
 - pdflatex -output-directory _build tex/cv.tex
