--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 before_install:
 - sudo apt-get update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
   texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended lmodern
+- chmod +x install_moderncv.sh
 - sudo ./install_moderncv.sh
 script:
 - mkdir _build
