--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
 - sudo apt-get update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
-  texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended lmodern
+  texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended lmodern texlive-full
 - chmod +x install_moderncv.sh
 - sudo sh ./install_moderncv.sh
 script:
